objects/Cumulative_GPA__c.object
<CustomObject><fields>
        <fullName>Cumulative_GPA__c</fullName>
        <label>Cumulative GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>175</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>175</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Most_Recent_CGPA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Recent CGPA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cumulative GPAs</relationshipLabel>
        <relationshipName>Cumulative_GPAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Term_GPA__c</fullName>
        <label>Term GPA</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Term_Number__c</fullName>
        <description>Term Code in Number Format</description>
        <formula>(Term__r.Term_Code__c)</formula>
        <label>Term Number</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Cumulative GPAs</relationshipLabel>
        <relationshipName>Cumulative_GPAs</relationshipName>
        <type>Lookup</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Cumulative GPA</label><nameField>
        <displayFormat>CGPA-{00000}</displayFormat>
        <label>Cumulative GPAs Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Cumulative GPAs</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>